test/syc/bad/enumredef.c
/*
 * Redefinition of 'e'.
 */

enum e {
	e1
};

enum e {
	e2
};
